objects/Feeding_Trial__c.object
<CustomObject>
    <fields>
        <fullName>Implants__c</fullName>
        <description>Cattle - Implants used for the cattle feeding trial</description>
        <label>Implants</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ralgro</fullName>
                </value>
                <value>
                    <fullName>Ralgro Magnum</fullName>
                </value>
                <value>
                    <fullName>Synovex C</fullName>
                </value>
                <value>
                    <fullName>Synovex S</fullName>
                </value>
                <value>
                    <fullName>Synovex H</fullName>
                </value>
                <value>
                    <fullName>Revalor G</fullName>
                </value>
                <value>
                    <fullName>Revalor S</fullName>
                </value>
                <value>
                    <fullName>Revalor H</fullName>
                </value>
                <value>
                    <fullName>Revalor IS</fullName>
                </value>
                <value>
                    <fullName>Revalor IH</fullName>
                </value>
                <value>
                    <fullName>Revalor 200</fullName>
                </value>
                <value>
                    <fullName>Finiplex - H</fullName>
                </value>
                <value>
                    <fullName>Compudose</fullName>
                </value>
                <value>
                    <fullName>Encore</fullName>
                </value>
                <value>
                    <fullName>Component E-S</fullName>
                </value>
                <value>
                    <fullName>Component E-H</fullName>
                </value>
                <value>
                    <fullName>Component E-C</fullName>
                </value>
                <value>
                    <fullName>Component TE-G</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Purina_Sales_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>All - Lead Purina Sales Person - this will autopopulate based on the user creating the Feeding Trial if the Feeding Trial is created from the Account related list</description>
        <label>Lead Purina Sales Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Feeding_Trials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Plant__c</fullName>
        <label>Manufacturing Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Feeding_Trial__c</fullName>
        <description>Determines if the Logged in User is the same as the Lead Purina Sales Person - used to display &apos;My Feeding Trials&apos; list view to the user</description>
        <formula>IF(Lead_Purina_Sales_Person__r.Id  =   $User.Id, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <label>My Feeding Trial?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Team_s_Feeding_Trials__c</fullName>
        <description>All - displays feeding trials to ASM users</description>
        <formula>IF(TEXT(Lead_Purina_Sales_Person__r.Sales_Division__c  ) = TEXT($User.Sales_Division__c) ,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <label>My Team&apos;s Feeding Trials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Hd_Removed1__c</fullName>
        <description>Cattle - Enter number of head removed on each date</description>
        <inlineHelpText>Enter number of head removed on each date</inlineHelpText>
        <label>1. Number Hd. Removed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Hd_Removed2__c</fullName>
        <description>Cattle - Enter number of head removed on each date</description>
        <inlineHelpText>Enter number of head removed on each date</inlineHelpText>
        <label>2. Number Hd. Removed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Hd_Removed3__c</fullName>
        <description>Cattle - Enter number of head removed on each date</description>
        <inlineHelpText>Enter number of head removed on each date</inlineHelpText>
        <label>3. Number Hd. Removed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Hd_Removed_Calc1__c</fullName>
        <description>Cattle - Cattle Date Removed Calc1 * Number of Cattle Removed</description>
        <formula>Date_Removed_Calc1__c  *  Number_Hd_Removed1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Hd. Removed Calc1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Hd_Removed_Calc2__c</fullName>
        <description>Cattle - Cattle Date Removed Calc1 * Number of Cattle Removed</description>
        <formula>Date_Removed_Calc2__c  *  Number_Hd_Removed2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Hd. Removed Calc2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Hd_Removed_Calc3__c</fullName>
        <description>Cattle - Cattle Date Removed Calc3 * Number of Cattle Removed</description>
        <formula>Date_Removed_Calc3__c  *  Number_Hd_Removed3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Hd. Removed Calc3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Animals_per_Pen__c</fullName>
        <description>All Show - Number of Animals per Pen for Show Feeding Trials﻿</description>
        <inlineHelpText>If Show Swine - Number of Litters per pen
If Show Lamb - Number of Lambs per pen
If Show Cattle - Number of Calves per pen
If Show Goat - Number of Kids per pen</inlineHelpText>
        <label>Number of Animals per Pen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Calves_F__c</fullName>
        <description>Dairy - field to display on Dairy feeding trial that looks up to the Number of Calves rollup field</description>
        <formula>IF(Number_of_Calves_RU__c = 0, NULL, Number_of_Calves_RU__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Calves</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Calves_RU__c</fullName>
        <description>Dairy - Number of Calves in the Feeding Trial</description>
        <label>Number of Calves (Hidden)</label>
        <summaryForeignKey>Feeding_Trial_Track_Sheet__c.Feeding_Trial__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Deer_on_Trial__c</fullName>
        <description>Deer - Number of Deer on Trial for the Feeding Trial</description>
        <label># of Deer on Trial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Horses__c</fullName>
        <description>Horses - Number of Horses in the Feeding Trial</description>
        <label>Number of Horses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Annual_Points__c</fullName>
        <formula>Opportunity__r.Annual_Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Annual Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Count__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.X18_Digit_Opportunity_ID__c ),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <description>All - Stage of the related opportunity</description>
        <formula>TEXT( Opportunity__r.StageName )</formula>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity related to the Feeding Trial</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Feeding Trials</relationshipLabel>
        <relationshipName>Feeding_Trials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Costs__c</fullName>
        <description>Cattle - explains what Other Costs are: such as implants, vaccinations, medications, grind and mix fees, etc.</description>
        <inlineHelpText>Use this to explain what Other Costs are: such as implants, vaccinations, medications, grind and mix fees, etc...</inlineHelpText>
        <label>Other Costs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Costs_per_head__c</fullName>
        <description>Cattle - Enter Other Costs and include the label to the right to &quot;per hd&quot;, &quot;Total&quot;, &quot;per day&quot;, etc.</description>
        <inlineHelpText>Enter Other Costs and change include the label to the right to &quot;per hd&quot;, &quot;Total&quot;, &quot;per day&quot;, etc.</inlineHelpText>
        <label>Other Costs (per head)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pasture_Size__c</fullName>
        <description>Cattle - Size of the pasture in acres</description>
        <label>Pasture Size (acres)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pasture_Type__c</fullName>
        <description>Cattle - Pasture Type</description>
        <label>Pasture Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Native Range</fullName>
                </value>
                <value>
                    <fullName>Brome Pasture</fullName>
                </value>
                <value>
                    <fullName>Fescue Pastures</fullName>
                </value>
                <value>
                    <fullName>Meadows</fullName>
                </value>
                <value>
                    <fullName>Cornstalk</fullName>
                </value>
                <value>
                    <fullName>Cool Season Pasture</fullName>
                </value>
                <value>
                    <fullName>Warm Season Pasture</fullName>
                </value>
                <value>
                    <fullName>Mixed Cool/Warm Season Pasture</fullName>
                </value>
                <value>
                    <fullName>Bluegrass Pasture</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potential_Annual_Tons__c</fullName>
        <description>Deer - Potential Annual Tons for the Feeding Trial</description>
        <inlineHelpText>Entire Farm’s Business</inlineHelpText>
        <label>Potential Annual Tons</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Feeding_Program__c</fullName>
        <description>Horse - Previous Feeding Trials</description>
        <label>Previous Feeding Program</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Mineral_Fed__c</fullName>
        <description>Cattle - Previous Mineral Fed for 90 Day Trial</description>
        <label>Previous Mineral Fed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>All - Primary Contact at the Account for the Feeding Trial</description>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Feeding Trials</relationshipLabel>
        <relationshipName>Feeding_Trials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Proof__c</fullName>
        <description>Cattle - Product Proof for the Cattle Feeding Trial</description>
        <label>Product Proof</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accur RS 33, 2HL, CL</fullName>
                </value>
                <value>
                    <fullName>RL Calf Creep</fullName>
                </value>
                <value>
                    <fullName>Accur Grow/Finish</fullName>
                </value>
                <value>
                    <fullName>Accur Starter</fullName>
                </value>
                <value>
                    <fullName>Accur Grower</fullName>
                </value>
                <value>
                    <fullName>Accur Backgrounder</fullName>
                </value>
                <value>
                    <fullName>Accur Finisher</fullName>
                </value>
                <value>
                    <fullName>Accur Range Liq (Cows)</fullName>
                </value>
                <value>
                    <fullName>SRL Feed Yard</fullName>
                </value>
                <value>
                    <fullName>PreCon</fullName>
                </value>
                <value>
                    <fullName>Beef N Bulk</fullName>
                </value>
                <value>
                    <fullName>Calf N Bulk</fullName>
                </value>
                <value>
                    <fullName>Accuration Block</fullName>
                </value>
                <value>
                    <fullName>Accuration NB</fullName>
                </value>
                <value>
                    <fullName>W&amp;R SF Minerals</fullName>
                </value>
                <value>
                    <fullName>W&amp;R Mineral Tubs</fullName>
                </value>
                <value>
                    <fullName>SM Stress Care 5</fullName>
                </value>
                <value>
                    <fullName>SM Stress Care 10</fullName>
                </value>
                <value>
                    <fullName>SM Starters Supplement</fullName>
                </value>
                <value>
                    <fullName>SM Growers</fullName>
                </value>
                <value>
                    <fullName>SM Finishers</fullName>
                </value>
                <value>
                    <fullName>RL Protein Tubs</fullName>
                </value>
                <value>
                    <fullName>RL Pro Minerals</fullName>
                </value>
                <value>
                    <fullName>SM Developer</fullName>
                </value>
                <value>
                    <fullName>SM Dairy Beef Grower</fullName>
                </value>
                <value>
                    <fullName>SM Dairy Beef Finisher</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>All - Product for the feeding trial</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Specie__c</field>
                <operation>equals</operation>
                <valueField>Product2.Specie__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Feeding Trials</relationshipLabel>
        <relationshipName>Feeding_Trials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Equine Adult® Horse Feed</fullName>
                </value>
                <value>
                    <fullName>Equine Junior® Horse Feed</fullName>
                </value>
                <value>
                    <fullName>Equine Senior® Horse Feed</fullName>
                </value>
                <value>
                    <fullName>Equine Senior® Active Healthy Edge®</fullName>
                </value>
                <value>
                    <fullName>Horse Chow #100®</fullName>
                </value>
                <value>
                    <fullName>Horse Chow #200®</fullName>
                </value>
                <value>
                    <fullName>Purina® Miniature Horse and Pony</fullName>
                </value>
                <value>
                    <fullName>Amplify® Nugget 50# Bag</fullName>
                </value>
                <value>
                    <fullName>Amplify® Nugget 30# Pail</fullName>
                </value>
                <value>
                    <fullName>Athlete®</fullName>
                </value>
                <value>
                    <fullName>Enrich Plus™ Supplement</fullName>
                </value>
                <value>
                    <fullName>Omolene #100® Active Pleasure</fullName>
                </value>
                <value>
                    <fullName>Omolene #200® Performance (RT)</fullName>
                </value>
                <value>
                    <fullName>Omolene #200® Performance</fullName>
                </value>
                <value>
                    <fullName>Omolene #300® Growth</fullName>
                </value>
                <value>
                    <fullName>Omolene #400® Complete Advantage™</fullName>
                </value>
                <value>
                    <fullName>Omolene #500® Competition</fullName>
                </value>
                <value>
                    <fullName>Race Ready® Horse Feed</fullName>
                </value>
                <value>
                    <fullName>Strategy® AX Horse Feed</fullName>
                </value>
                <value>
                    <fullName>Strategy® Healthy Edge® Horse Feed</fullName>
                </value>
                <value>
                    <fullName>Strategy® GX Bag</fullName>
                </value>
                <value>
                    <fullName>Strategy® GX Bulk</fullName>
                </value>
                <value>
                    <fullName>Ultium® Competition Horse Formula</fullName>
                </value>
                <value>
                    <fullName>Ultium® Growth Horse Formula</fullName>
                </value>
                <value>
                    <fullName>WellSolve L/S®</fullName>
                </value>
                <value>
                    <fullName>WellSolve W/C®</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <description>Cattle - Program Type for Cattle Feeding Trial</description>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calves – Creep</fullName>
                </value>
                <value>
                    <fullName>Creep &amp; Weaning</fullName>
                </value>
                <value>
                    <fullName>Creep/Wean/Background</fullName>
                </value>
                <value>
                    <fullName>Creep/Wean/Backgrd/Finish</fullName>
                </value>
                <value>
                    <fullName>Weaning (&lt;30 Days)</fullName>
                </value>
                <value>
                    <fullName>Weaning/Background</fullName>
                </value>
                <value>
                    <fullName>Wean/Backgrd/Finish</fullName>
                </value>
                <value>
                    <fullName>Background – Steers</fullName>
                </value>
                <value>
                    <fullName>Background – Heifers</fullName>
                </value>
                <value>
                    <fullName>Background – Mixed</fullName>
                </value>
                <value>
                    <fullName>Background &amp; Finish</fullName>
                </value>
                <value>
                    <fullName>Finishing – Steers</fullName>
                </value>
                <value>
                    <fullName>Finishing – Heifers</fullName>
                </value>
                <value>
                    <fullName>Finishing – Mixed</fullName>
                </value>
                <value>
                    <fullName>Brood Cows</fullName>
                </value>
                <value>
                    <fullName>Cows - Fattening</fullName>
                </value>
                <value>
                    <fullName>Conditioning Bulls</fullName>
                </value>
                <value>
                    <fullName>Developing Bulls</fullName>
                </value>
                <value>
                    <fullName>Developing Heifers</fullName>
                </value>
                <value>
                    <fullName>Stockers/Heifers – Grass</fullName>
                </value>
                <value>
                    <fullName>Stockers/Steers – Grass</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proof_Type__c</fullName>
        <description>Cattle - Program seeking payment from, Business Builder, Great Starts, 90 Day Mineral Trial, or if just submitting data to the database.</description>
        <inlineHelpText>Program you are seeking payment from</inlineHelpText>
        <label>Proof Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Builder</fullName>
                </value>
                <value>
                    <fullName>Great Starts</fullName>
                </value>
                <value>
                    <fullName>90 D Mineral Trial</fullName>
                </value>
                <value>
                    <fullName>Proof Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purina_Advantage__c</fullName>
        <description>Document what differentiates Purina feed from it&apos;s competitors</description>
        <label>Purina Advantage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Purina_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>All - this will autopopulate based on the Associated Dealer field on the Account the Feeding Trial is created from</description>
        <label>Purina Dealer/Coop Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer-Coop Account, Prospect Dealer-Coop Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Feeding Trials (Purina Dealer)</relationshipLabel>
        <relationshipName>Feeding_Trials1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Cattle - Sales Division for the Lead Sales Person (replaces the Region field on the Cattle spreadsheet)</description>
        <formula>TEXT( Lead_Purina_Sales_Person__r.Sales_Division__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Division__c</fullName>
        <description>ALL - Sales Division of the Lead Purina Sales Person on the Feeding Trial</description>
        <formula>TEXT( Lead_Purina_Sales_Person__r.Sales_Division__c )</formula>
        <label>Sales Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <description>Cattle - Sex of the Cattle for the Feeding Trial</description>
        <label>Sex</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Steer</fullName>
                </value>
                <value>
                    <fullName>Heifer</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
                <value>
                    <fullName>Cow</fullName>
                </value>
                <value>
                    <fullName>Bull</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specie__c</fullName>
        <description>All - Specie picklist field used to determine the eligible products that display for the Feeding Trial</description>
        <label>Specie</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cattle</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Horse</fullName>
                </value>
                <value>
                    <fullName>Show - Cattle</fullName>
                </value>
                <value>
                    <fullName>Deer</fullName>
                </value>
                <value>
                    <fullName>Show - Goat</fullName>
                </value>
                <value>
                    <fullName>Show - Lamb</fullName>
                </value>
                <value>
                    <fullName>Show - Swine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Avg_BCS__c</fullName>
        <description>Cattle - Enter starting Avg. Cow BCS in this field.  This will appear only if Program Type is &quot;Brood Cows&quot;</description>
        <inlineHelpText>Enter Starting Avg. Cow BCS in this field if the Program Type is &quot;Brood Cows&quot;</inlineHelpText>
        <label>Start Avg. BCS</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Avg_Weight_lbs__c</fullName>
        <description>Cattle - the Starting total weight / Starting number of head</description>
        <formula>Start_Total_Weight_lbs__c /  Start_No_Head__c</formula>
        <label>Start Avg. Weight (lbs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>All - Start Date for the Feeding Trials</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_No_Head__c</fullName>
        <description>Cattle - Head number at the beginning of the Feeding Trial</description>
        <label>Start No. Head</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Number_Hd__c</fullName>
        <description>Cattle - Starting No. Head for Feeding Trial. Based on &apos;Start # Head&apos; formula in HD Days tab</description>
        <formula>Start_No_Head__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start # Hd.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Number_Head_Calc__c</fullName>
        <description>Cattle - Days of Trial x Start # Head - HD Days tab</description>
        <formula>End_Date_Removed_Calc__c *  Start_Number_Hd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start # Head Calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Total_Weight_lbs__c</fullName>
        <description>Cattle - Total weight at the Start of the Feeding Trial</description>
        <label>Start Total Weight (lbs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>ALL - Status for the Feeding Trial</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sum_Age__c</fullName>
        <description>Dairy - Summary of all ages of calves on feeding trial, used to calculate the average BW age</description>
        <label>Sum Age</label>
        <summarizedField>Feeding_Trial_Track_Sheet__c.Age_at_BW_Measurement_days__c</summarizedField>
        <summaryFilterItems>
            <field>Feeding_Trial_Track_Sheet__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dairy</value>
        </summaryFilterItems>
        <summaryForeignKey>Feeding_Trial_Track_Sheet__c.Feeding_Trial__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_Age_at_Weaning__c</fullName>
        <description>Dairy - Sum of the Age at the Weaning Weigh in</description>
        <label>Sum Age at Weaning</label>
        <summarizedField>Feeding_Trial_Track_Sheet__c.Age_at_WW_Measurement_days__c</summarizedField>
        <summaryFilterItems>
            <field>Feeding_Trial_Track_Sheet__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dairy</value>
        </summaryFilterItems>
        <summaryForeignKey>Feeding_Trial_Track_Sheet__c.Feeding_Trial__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_Average_Daily_Gain__c</fullName>
        <description>Dairy - Sum of the Average Daily Gain for the Calves in the Feeding Trial</description>
        <label>Sum Average Daily Gain</label>
        <summarizedField>Feeding_Trial_Track_Sheet__c.Average_Daily_Gain__c</summarizedField>
        <summaryFilterItems>
            <field>Feeding_Trial_Track_Sheet__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dairy</value>
        </summaryFilterItems>
        <summaryForeignKey>Feeding_Trial_Track_Sheet__c.Feeding_Trial__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_Birth_Height__c</fullName>
        <description>Dairy - Sum of the Birth Height for the cattle in the feeding trial</description>
        <label>Sum Birth Height</label>
        <summarizedField>Feeding_Trial_Track_Sheet__c.Starting_Height__c</summarizedField>
        <summaryFilterItems>
            <field>Feeding_Trial_Track_Sheet__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dairy</value>
        </summaryFilterItems>
        <summaryForeignKey>Feeding_Trial_Track_Sheet__c.Feeding_Trial__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_Birth_Weight_lbs__c</fullName>
        <description>Dairy - Sum of the Birth Weight of all Cattle in the Feeding Trial</description>
        <label>Sum Birth Weight (lbs)</label>
        <summarizedField>Feeding_Trial_Track_Sheet__c.Starting_Weight_lbs__c</summarizedField>
        <summaryFilterItems>
            <field>Feeding_Trial_Track_Sheet__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dairy</value>
        </summaryFilterItems>
        <summaryForeignKey>Feeding_Trial_Track_Sheet__c.Feeding_Trial__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>